[gd_scene load_steps=2 format=3 uid="uid://bda7tc25so4nh"]

[ext_resource type="Script" uid="uid://ot16vqphakw1" path="res://Scenes/enemy_base.gd" id="1_r040p"]

[node name="EnemyBase" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_r040p")
points = null
speed = null

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
